# GenAI-Hackathon

./: .dockerignore  .gitignore  Dockerfile  pipeline.ipynb  pyproject.toml  requirements.txt  test.ipynb
.github/: copilot-instructions.md
app/: main.py
app/resources/: constants.yaml
app/routers/: auth_router.py  dashboard_router.py  datamodel.py  projects_router.py  requirements_router.py  router.py  router_old_depreceated.py  testcases_router.py  utilities_router.py  versions_router.py
app/services/: auth_service.py  langfuse_prompt_manager.py  prompt_fetch.py  prompt_service.py  reponse_format.py  requirements_extractor.py  testcase_generator.py
app/services/llm_services/: graph_pipeline.py  graph_state.py  llm_factory.py  llm_interface.py  reponse_format.py
app/services/llm_services/llm_implementation/: gemini_models.py
app/services/llm_services/tools/: rag_tools.py
app/services/req_extract_service/: llm_helpers.py  llm_wrapper.py  page_processor.py  requirements_extractor.py  storage.py  utils.py
app/services/testcase_service/: __init__.py  graph_pipeline.py  graph_state.py  helpers.py  testcase_generator.py
app/services/testcase_service/tools/: __init__.py  rag_tools.py
app/utilities/: auth_helper.py  auth_utils.py  dc_enums.py  dc_exception.py  dc_logger.py  document_parser.py  document_parser_depreceated.py  helper.py
app/utilities/db_utilities/: models.py  mongo_implementation.py  postgres_implementation.py  sqlite_implementation.py
